tests/kulezi_tests/bad/invalid_return05.lat
int main() {
    if (false) error();
}